--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Simple Jekyll theme to host internal/external events happening in and around your area. Free free to contribute or fork the repo.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://nerdguidedc.com" # the base hostname & protocol for your site
+url: "https://nerdguidedc.com" # the base hostname & protocol for your site
 
 #These settings might be able to go?
 author: Michael Spiegel
