--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title: Nerd Guide DC
 event_label: Events
 
 description: > # this means to ignore newlines until "baseurl:"
-  Simple Jekyll theme to host internal/external events happening in and around your area. Free free to contribute or fork the repo.
+  This site is devoted towards science, technology, and intellectual activities and events in the Washington DC area.
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://nerdguidedc.com" # the base hostname & protocol for your site
